Hide scrollbar for body to prevent jump when toggling overflow

--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -21,6 +21,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+
+  // fix scroll bar jump when toggling body overflow
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 img {
